--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     
 
 <!-- Footer -->
-<footer class="container-fluid foot" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+<footer class="footer container-fluid foot" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
     <div class="row">
       <div class="col-sm-6 mapita">
       <div class="embed-responsive embed-responsive-21by9">       
