hover exagerando dramaticamente

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
     <div class="col-sm-3">
       <div class="card">
         <div class="card-body">
-          <img src="images/dibujo2.png" class="card-img-top" alt="...">
+          <img src="https://placekitten.com/316/316" class="card-img-top" alt="...">
           <div class="card-body">
           <h5 class="card-title">Novedades en la sección Infantil</h5>
           <p class="card-text">Conoce los nuevos libros.</p>
@@ -220,7 +220,7 @@
   <div class="col-sm-3">
     <div class="card">
       <div class="card-body">
-        <img src="images/dibujo21.png" class="card-img-top" alt="...">
+        <img src="https://placekitten.com/316/316" class="card-img-top" alt="...">
         <div class="card-body">
         <h5 class="card-title">¿Es verdad que un robot que puede leer?</h5>
         <p class="card-text" >Foro debate sobre el futuro de la IA</p>
@@ -233,7 +233,7 @@
 <div class="col-sm-3">
   <div class="card">
     <div class="card-body">
-      <img src="images/dibujo4.png" class="card-img-top" alt="...">
+      <img src="https://placekitten.com/316/316" class="card-img-top" alt="...">
       <div class="card-body" style="height: 25%";>
       <h5 class="card-title">Conoce la colección de nuestros autores locales</h5>
       <p class="card-text">Disponible para toda la comunidad.</p>
