los gradientes más repulsivos de la internet

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
           <div class="card-body">
           <h5 class="card-title">Novedades en la sección Infantil</h5>
           <p class="card-text">Conoce los nuevos libros.</p>
-          <button class="custom-btn btn-5"><span>Conocer</span></button>
+          <button class="btn-5"><span>Conocer</span></button>
           
         </div>
       </div>
@@ -224,7 +224,7 @@
         <div class="card-body">
         <h5 class="card-title">¿Es verdad que un robot que puede leer?</h5>
         <p class="card-text" >Foro debate sobre el futuro de la IA</p>
-        <button class="custom-btn btn-5"><span>Investigar</span></button>
+        <button class="btn-5"><span>Investigar</span></button>
 
       </div>
     </div>
@@ -237,7 +237,7 @@
       <div class="card-body" style="height: 25%";>
       <h5 class="card-title">Conoce la colección de nuestros autores locales</h5>
       <p class="card-text">Disponible para toda la comunidad.</p>
-      <button class="custom-btn btn-5"><span>Visitar</span></button>
+      <button class="btn-5"><span>Visitar</span></button>
      </div>
   </div>
 </div>  
@@ -246,9 +246,9 @@
 
 </article>
 
-<!-- articulo con video -->
+<!-- articulo con foto -->
 <aside>
-<div class="clearfix" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
+<div class="clearfix asides" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
 <br>
 <img src="images/andrea.jpg" class="img-fluid col-md-6 float-md-end mb-3 ms-md-3" alt="Responsive image woman">
 <br>
