--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <!-- Google fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&family=Quicksand&family=Roboto+Slab:wght@200&display=swap" rel="stylesheet">
+<!-- LETRACHINA -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@200&display=swap" rel="stylesheet">
+
 <!-- Favicon -->
     <link rel="shortcut icon" href="./images/logo6.png">
 <!-- Boxicons CSS para iconos de redes sociales -->
@@ -248,18 +256,18 @@
 
 <!-- articulo con foto -->
 <aside>
-<div class="clearfix asides" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
-<br>
+<div class="clearfix asides txt-main" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
+
 <img src="images/andrea.jpg" class="img-fluid col-md-6 float-md-end mb-3 ms-md-3" alt="Responsive image woman">
-<br>
+
 <h4>Curso Derechos de Autor en las Bibliotecas universitarias</h4>
-<br>
+
 <p>
-Se espera que, al finalizar el recorrido del curso, los participantes logren:</p> <br> <p>
+Se espera que, al finalizar el recorrido del curso, los participantes logren:</p>  <p>
 ● Distinguir las características y funciones de una biblioteca digital y de un
-repositorio institucional; <br>
+repositorio institucional; 
 ● Identificar fuentes de información relevantes y de calidad disponibles en soporte
-digital; <br>
+digital; 
 ● Recuperar y usar efectivamente información necesaria a través de bibliotecas
 digitales; <br>
 ● Colaborar en la conformación de repositorios institucionales de acceso abierto
@@ -284,7 +292,7 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus ipsum iust
       <div class="col-sm-6 mapita">
       <div class="embed-responsive embed-responsive-21by9">       
             <iframe class="embed-responsive-item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2624.9916256937586!2d2.2922926156743895!3d48.858370079287475!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66e2964e34e2d%3A0x8ddca9ee380ef7e0!2sTorre%20Eiffel!5e0!3m2!1ses!2sar!4v1666466278743!5m2!1ses!2sar" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></iframe>
-            <p>Dirección Champ de Mars, 5 Av. Anatole France, 75007 Paris, Francia</p>
+            <p class="txt-resaltar">Dirección Champ de Mars, 5 Av. Anatole France, 75007 Paris, Francia</p>
           </div>
         </div>
       <div class="col-sm-3 formularios">
