--- a/pages/calidad.html
+++ b/pages/calidad.html
@@ -88,20 +88,20 @@
              </ul>
            </li>
            <li class="nav-item dropdown">
-             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+             <a class="nav-link dropdown-toggle" href="../pages/guias.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                Guías de uso</a>              
              <ul class="dropdown-menu">       
-               <li><a class="dropdown-item" href="#">Todas las guías</a></li>
-               <li><a class="dropdown-item" href="#">EconLit</a></li>
-               <li><a class="dropdown-item" href="#">IEEE</a></li>
-               <li><a class="dropdown-item" href="#">JCR</a></li>
-               <li><a class="dropdown-item" href="#">JSTOR</a></li>
-               <li><a class="dropdown-item" href="#">Medline</a></li>
-               <li><a class="dropdown-item" href="#">OVID</a></li>
-               <li><a class="dropdown-item" href="#">Psycinfo</a></li>
-               <li><a class="dropdown-item" href="#">Pubmed</a></li>
-               <li><a class="dropdown-item" href="#">Science Direct</a></li>
-               <li><a class="dropdown-item" href="#">Web of Science</a></li>
+               <li><a class="dropdown-item" href="../pages/guias.html#econlit">Todas las guías</a></li>
+               <li><a class="dropdown-item" href="../pages/guias.html#econlit">EconLit</a></li>
+               <li><a class="dropdown-item" href="../pages/guias.html#ieee">IEEE</a></li>
+               <li><a class="dropdown-item" href="../pages/guias.html#jcr">JCR</a></li>
+               <li><a class="dropdown-item" href="../pages/guias.html#jstor">JSTOR</a></li>
+               <li><a class="dropdown-item" href="../pages/guias.html#jmedline">Medline</a></li>
+               <li><a class="dropdown-item" href="../pages/guias.html#ovid">OVID</a></li>
+               <li><a class="dropdown-item" href="../pages/guias.html#psy">Psycinfo</a></li>
+               <li><a class="dropdown-item" href="../pages/guias.html#pubmed">Pubmed</a></li>
+               <li><a class="dropdown-item" href="../pages/guias.html#sd">Science Direct</a></li>
+               <li><a class="dropdown-item" href="../pages/guias.html#webof">Web of Science</a></li>
              </ul>
            </li> 
            <li class="nav-item dropdown">
