botoncito del acordeon

--- a/pages/guias.html
+++ b/pages/guias.html
@@ -137,7 +137,53 @@
        </div>
      </div>
    </nav>
-<main id="econlit">
+<!-- fin nav- menú principal -->
+
+
+<!-- acordeon -->
+   <section class="acordeon">
+    <div class="accordion" id="accordionPanelsStayOpenExample">
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+            Accordion Item #1
+          </button>
+        </h2>
+        <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
+          <div class="accordion-body">
+            <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+            Accordion Item #2
+          </button>
+        </h2>
+        <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
+          <div class="accordion-body">
+            <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+            Accordion Item #3
+          </button>
+        </h2>
+        <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
+          <div class="accordion-body">
+            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+          </div>
+        </div>
+      </div>
+    </div>
+   </section>
+
+<!-- fin acordeon -->
+<main class="guia" id="econlit">
   <h2>Guía de uso EconLit</h2>
   
   <p> Contenido: EconLit with Full Text es una de las principales bases de datos en el campo de la literatura económica. Proporciona índices y textos completos de artículos de todos los campos de la economía, incluso mercados de capitales, estudios depaíses, econometría, previsión económica, economía ambien-tal, regulaciones gubernamentales, economía del trabajo, teoría monetaria, economía urbana, etc. Cobertura temporal: 1969 -</p>
@@ -180,13 +226,13 @@
     Otra forma de recibir información sobre las novedades es utilizar el vínculo “Información de sindicación” que aparece cuando creamos una alerta, para originar una noticia nueva mediante un recopilador o presentador de RSS. Permite acceder al listado alfabético de todas las publicaciones a texto completo que contiene la base de datos. Además incluye un buscador de publicaciones por tema y des-cripción, y por cualquier palabra que aparezca en el título de la publicación. Esta opción permite saber cuantas veces un documento, un autor o una publicación han sido citados en la base de datos. Seleccionando esta opción se accede a los índices de autores, materias, títulos de publicación, regiones geográficas, etc. de los documentos que aparecen en la base de datos.
     Tutorial: Se puede acceder al tutorial de uso de la base de datos (en inglés) pinchando en el icono</p>
 </main>
-<section id="ieee">
+<section class="guia" id="ieee">
   <h2> IEEE (Institute of Electrical and Electronics Engineers)</h2>
   <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus assumenda illo similique in placeat iusto minus, nemo, quasi hic ratione, aliquid quaerat alias molestiae quidem odio. Illum voluptas asperiores quis, officiis inventore animi expedita delectus quos quo consequuntur repudiandae, accusantium nisi unde voluptate. Animi quam labore laboriosam hic voluptates ducimus nemo aspernatur maxime sint veritatis nihil nam perspiciatis aliquam vel voluptatum inventore architecto iure, quaerat iste. Nulla nihil odit voluptates qui obcaecati ad debitis harum aperiam ullam quia autem dolor vitae, inventore ratione magnam cum aspernatur asperiores iste! Ex officia ipsum totam eveniet earum veniam sit, sed ipsam adipisci recusandae minima nemo similique labore quam unde qui animi incidunt aperiam ipsa dolorum quisquam dolores, autem dolorem voluptatum. Officia voluptatibus laboriosam tempora sed labore magni illo fuga culpa nihil autem nostrum similique vel, quibusdam nisi perferendis veniam neque vitae sint vero ipsum sunt reprehenderit! Id sed vero nobis omnis quisquam sapiente.</p>
   <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus assumenda illo similique in placeat iusto minus, nemo, quasi hic ratione, aliquid quaerat alias molestiae quidem odio. Illum voluptas asperiores quis, officiis inventore animi expedita delectus quos quo consequuntur repudiandae, accusantium nisi unde voluptate. Animi quam labore laboriosam hic voluptates ducimus nemo aspernatur maxime sint veritatis nihil nam perspiciatis aliquam vel voluptatum inventore architecto iure, quaerat iste. Nulla nihil odit voluptates qui obcaecati ad debitis harum aperiam ullam quia autem dolor vitae, inventore ratione magnam cum aspernatur asperiores iste! Ex officia ipsum totam eveniet earum veniam sit, sed ipsam adipisci recusandae minima nemo similique labore quam unde qui animi incidunt aperiam ipsa dolorum quisquam dolores, autem dolorem voluptatum. Officia voluptatibus laboriosam tempora sed labore magni illo fuga culpa nihil autem nostrum similique vel, quibusdam nisi perferendis veniam neque vitae sint vero ipsum sunt reprehenderit! Id sed vero nobis omnis quisquam sapiente.</p>
 </section>
 
-<section id="jcr">
+<section class="guia" id="jcr">
   <h2>Guía de uso JCR (Journal Citation Report)</h2>
   <ul>
     <li>Portafolio de Web of Knowledge</li>
@@ -197,34 +243,34 @@
   </ul>
 </section>
 
-<section id="jstor">
+<section class="guia" id="jstor">
   <h2>Guía de uso JSTOR</h2>
   <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos illum architecto, quidem aspernatur blanditiis, autem ex mollitia veritatis corporis quis dignissimos neque, vero dolore vitae dolorem sunt eius nemo eligendi consectetur aliquam explicabo laboriosam possimus placeat magnam? Similique quas aperiam distinctio exercitationem ratione corporis officiis, id facilis enim dolorem necessitatibus fugit molestiae possimus culpa animi sed fuga soluta sequi dolores vero. Magni consequatur amet totam pariatur quos repudiandae debitis! Mollitia, a dolore veritatis, nesciunt id dolor autem in sit laudantium libero, culpa repellat reiciendis. Repellendus, assumenda, ut tenetur rem deleniti at repellat, magni deserunt quae amet alias fuga officia vitae blanditiis? Beatae nesciunt hic voluptate sequi voluptatem ea totam facere deleniti commodi incidunt, cupiditate ipsam consectetur corporis aut quam nulla. Hic quis corporis exercitationem commodi explicabo. Dolor nisi reiciendis minus! Ab inventore perspiciatis aspernatur et excepturi modi! Possimus asperiores error similique, maxime enim alias velit! Praesentium debitis commodi repudiandae eum nulla, corrupti laudantium alias pariatur ullam ipsam earum aliquam, dolorum odio laborum? Dolor corrupti nam recusandae sed repellat nesciunt assumenda dolores. Dicta impedit, rem voluptatem ut mollitia labore iste aliquam pariatur, consequatur obcaecati in laudantium aperiam sit reprehenderit aspernatur sint quasi officiis vel maxime quo harum! Delectus sapiente in distinctio?</p>
 </section>
 
-<section id="medline">
+<section class="guia" id="medline">
   <h2>Guía de uso Medline</h2>
   <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam ipsa ipsum error ex debitis distinctio, veritatis itaque similique, nesciunt praesentium sint aliquam sed dolore nisi reiciendis consectetur perferendis accusamus cumque excepturi sequi nobis ipsam. Earum aperiam rem doloremque corrupti quas aliquam nesciunt accusantium vel distinctio voluptate! Explicabo corporis reprehenderit deleniti pariatur amet repellat quisquam quibusdam debitis voluptates soluta optio non id dolore voluptas totam obcaecati omnis, error quidem sapiente maiores quod ullam nostrum voluptate cum? Necessitatibus nihil obcaecati adipisci consectetur quas officia quod vero dolorum iusto dolores, impedit enim sequi. Aut recusandae maxime nam quam odit vel cupiditate itaque neque iure laborum facere harum molestias, inventore a incidunt magni porro exercitationem, fugiat aperiam ut ea! Eveniet, sit excepturi distinctio atque incidunt magni ex a voluptates! Mollitia nisi explicabo eveniet voluptatem optio doloribus numquam placeat aliquam, quae exercitationem temporibus voluptates distinctio corporis aut quo obcaecati excepturi dolores quis doloremque ratione illo itaque fugit! Aliquid facilis, consequatur unde ullam dolore natus corporis eveniet expedita officia eligendi rem, asperiores quasi, reprehenderit laborum consectetur! Molestias voluptates quaerat asperiores voluptatum ad quibusdam, atque temporibus. Blanditiis maxime quo a similique ad ex ab quod sequi. Illum consequatur maxime aspernatur, ducimus quibusdam laborum? Dolorem modi harum, sunt dignissimos, aut numquam commodi voluptates aspernatur molestias eos temporibus minus quidem nemo quasi distinctio eius aliquam iusto. Molestiae reiciendis in ratione doloremque architecto perspiciatis, maiores blanditiis, culpa, dolore esse maxime qui! Corporis autem impedit excepturi quasi! Esse accusamus ab, vitae dolore id est repellendus commodi, tempora cum dolores consequatur corrupti? Ipsa, aspernatur excepturi exercitationem nihil dignissimos optio, quis quia vitae repudiandae nesciunt sunt. Porro ullam cupiditate beatae animi, velit, odit placeat deleniti suscipit sit saepe odio reprehenderit? Laborum quidem magni, deserunt quisquam aliquid veniam illo consequatur, perferendis repellat nobis officia tempore architecto. Ratione, nobis. Pariatur necessitatibus voluptatem natus id error voluptas adipisci! Sint voluptates quisquam dolore nobis, soluta necessitatibus architecto sunt id iure quod? Recusandae ipsam facere exercitationem cumque distinctio numquam voluptatem commodi laborum iste. Quidem quasi ratione sunt neque laudantium distinctio incidunt. Quis, a? Fuga accusantium, ab, illo deleniti culpa soluta numquam dolore dolores iste odio itaque pariatur! Ducimus cupiditate itaque nemo sint vero exercitationem repellendus veniam repellat ipsa explicabo eius, nisi aspernatur eos velit nostrum asperiores! Illo odit explicabo, vel possimus voluptate blanditiis delectus harum nihil doloremque, tempore illum tempora natus impedit excepturi, earum est voluptatibus? Aliquid debitis perspiciatis ipsa itaque reprehenderit amet omnis atque possimus, illum minus!</p>
 </section>
 
-<section id="ovid">
+<section class="guia" id="ovid">
   <h2>Guía de uso de: OVID - Journals Ovid Full Text</h2>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis harum, autem deleniti provident ducimus et sapiente obcaecati dolores accusamus! Ullam, reiciendis? Architecto eaque earum facere quia assumenda quos dolorem, in minima optio minus. Impedit, optio. Sunt eveniet dignissimos ex accusamus quia corporis! A illo voluptates doloribus labore impedit exercitationem velit corrupti eligendi doloremque dicta! Ipsum ipsam porro rerum sit reiciendis voluptates deserunt fugit totam quam, quasi animi neque modi ipsa quis asperiores laboriosam tempora voluptatem ut quia est odio autem dolor minus? Doloribus ad aut, iste amet quisquam quis. Asperiores, rerum? Velit deleniti, labore molestias rem neque nam quam ad.</p>
 </section>
 
-<section id="psy">
+<section class="guia" id="psy">
   <h2>Guía de uso de Psycinfo</h2>
   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores qui, vitae magnam officia quas iusto exercitationem delectus a, ratione sint obcaecati necessitatibus provident corrupti repellat. Porro cumque soluta et repudiandae architecto laudantium dolor, ut rem accusamus error temporibus? Sunt deserunt temporibus molestias corporis porro repellendus ea vero et provident aperiam? Eius, minima. Reprehenderit fugiat, sed distinctio vero qui culpa sint facere nemo pariatur velit labore consequuntur animi ipsa laboriosam necessitatibus harum dolorum illum eligendi? Maxime porro perferendis laboriosam. Ratione accusamus fugiat non nemo illum libero quia placeat ullam ducimus nihil, itaque voluptatibus officia atque soluta temporibus inventore culpa at, eius enim voluptates quo eveniet sequi molestiae nostrum. Rem, dignissimos nihil! In necessitatibus ducimus iure possimus hic omnis, vitae quia rerum voluptatem inventore aliquam repellat maiores pariatur sint vero minus earum officiis autem sed facere perspiciatis. Corrupti rem excepturi repellat! Quos unde provident adipisci dolorem accusantium atque magni. Officiis possimus eos eligendi, totam ex quo sunt nostrum corrupti esse? Deleniti eius, aut deserunt totam minus consectetur dicta quae fuga aspernatur dolor.</p>
   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores qui, vitae magnam officia quas iusto exercitationem delectus a, ratione sint obcaecati necessitatibus provident corrupti repellat. Porro cumque soluta et repudiandae architecto laudantium dolor, ut rem accusamus error temporibus? Sunt deserunt temporibus molestias corporis porro repellendus ea vero et provident aperiam? Eius, minima. Reprehenderit fugiat, sed distinctio vero qui culpa sint facere nemo pariatur velit labore consequuntur animi ipsa laboriosam necessitatibus harum dolorum illum eligendi? Maxime porro perferendis laboriosam. Ratione accusamus fugiat non nemo illum libero quia placeat ullam ducimus nihil, itaque voluptatibus officia atque soluta temporibus inventore culpa at, eius enim voluptates quo eveniet sequi molestiae nostrum. Rem, dignissimos nihil! In necessitatibus ducimus iure possimus hic omnis, vitae quia rerum voluptatem inventore aliquam repellat maiores pariatur sint vero minus earum officiis autem sed facere perspiciatis. Corrupti rem excepturi repellat! Quos unde provident adipisci dolorem accusantium atque magni. Officiis possimus eos eligendi, totam ex quo sunt nostrum corrupti esse? Deleniti eius, aut deserunt totam minus consectetur dicta quae fuga aspernatur dolor.</p>
 </section>
 
-<section id="pubmed">
+<section class="guia" id="pubmed">
   <h2>Guía de uso PubMed</h2>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores accusantium officiis facilis, adipisci labore neque non a ullam corrupti quae. Rem dignissimos praesentium perspiciatis autem quasi, maiores tempore perferendis cupiditate!</p>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores accusantium officiis facilis, adipisci labore neque non a ullam corrupti quae. Rem dignissimos praesentium perspiciatis autem quasi, maiores tempore perferendis cupiditate!</p>
 </section>
 
-<section id="sd">
+<section class="guia" id="sd">
   <h2>Guía de uso ScienceDirect - Elsevier</h2>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores accusantium officiis facilis, adipisci labore neque non a ullam corrupti quae. Rem dignissimos praesentium perspiciatis autem quasi, maiores tempore perferendis cupiditate!</p>
   <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus assumenda illo similique in placeat iusto minus, nemo, quasi hic ratione, aliquid quaerat alias molestiae quidem odio. Illum voluptas asperiores quis, officiis inventore animi expedita delectus quos quo consequuntur repudiandae, accusantium nisi unde voluptate. Animi quam labore laboriosam hic voluptates ducimus nemo aspernatur maxime sint veritatis nihil nam perspiciatis aliquam vel voluptatum inventore architecto iure, quaerat iste. Nulla nihil odit voluptates qui obcaecati ad debitis harum aperiam ullam quia autem dolor vitae, inventore ratione magnam cum aspernatur asperiores iste! Ex officia ipsum totam eveniet earum veniam sit, sed ipsam adipisci recusandae minima nemo similique labore quam unde qui animi incidunt aperiam ipsa dolorum quisquam dolores, autem dolorem voluptatum. Officia voluptatibus laboriosam tempora sed labore magni illo fuga culpa nihil autem nostrum similique vel, quibusdam nisi perferendis veniam neque vitae sint vero ipsum sunt reprehenderit! Id sed vero nobis omnis quisquam sapiente.</p>
@@ -232,7 +278,7 @@
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
 </section>
 
-<section id="weboff">
+<section class="guia" id="weboff">
   <h2>Guía de uso Web of Science Conect</h2>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores accusantium officiis facilis, adipisci labore neque non a ullam corrupti quae. Rem dignissimos praesentium perspiciatis autem quasi, maiores tempore perferendis cupiditate!</p>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores accusantium officiis facilis, adipisci labore neque non a ullam corrupti quae. Rem dignissimos praesentium perspiciatis autem quasi, maiores tempore perferendis cupiditate!</p>
