anda el diseño?

--- a/pages/guias.html
+++ b/pages/guias.html
@@ -21,31 +21,6 @@
   <title>Biblioteca central</title>
 </head>
 <body>
-<!-- Encabezado -->
-    <!-- Encabezado -->
-    <header>
-      <div class="rosita" style="background-image: url('../images/rosita.jpg');"> 
-        <!-- iconos de redes sociales -->
-            <div class="d-flex flex-row-reverse">
-                <div class="p-2"><i class='bx bx-rss bx-md bx-tada-hover'></i></div>
-                <div class="p-2"><i class='bx bx-envelope bx-md bx-tada-hover'></i></div>
-                <div class="p-2"><i class='bx bxl-instagram bx-md bx-tada-hover'></i></div>
-                <div class="p-2"><i class='bx bxl-facebook bx-md bx-tada-hover'></i></div>
-            </div>
-             <div class="row">
-                <div class="col-sm-6">
-                  
-                    <h1>Biblioteca Central</h1>
-                    <h2>Universidad Nacional de Lorem</h2>
-              </div>         
-        <!-- gif de bicho saltando -->
-                <div class="col-sm-6 justify-content-end align-self-end">
-                    <img class="oog-review-section__image bicho"  alt="Monster jumping" src="https://cdn.teachyourmonster.org/assets/oog/pages/rff/animation-f97a193a35de2c5bd09ec2d0a08cb37773083ca95dbd9bde9b81cf18ddbc708f.gif" width="10%">
-                </div>
-           </div>    
-          </div>          
-           
-       </header>
 
 <!-- nav- menú principal -->
 <nav class="navbar navbar-expand-lg minav">
@@ -138,6 +113,48 @@
      </div>
    </nav>
 <!-- fin nav- menú principal -->
+
+<!-- COPIA HASTA AQUIIIIIII -->
+<!-- carta contenedora del body -->
+<section class="page-header min-vh-80" style="background-image: url('../images/rosita.jpg')">
+  <span class="mask bg-gradient-dark opacity-6"></span>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8 mx-auto">
+        <div class="text-center">
+          <h1 class="text-black whity">Biblioteca Central</h1>
+          <h3 class="text-black">Universidad Nacional de Lorem</h3>
+          <section class="redes">
+            <div class="rosita"> 
+              <!-- iconos de redes sociales -->
+                  <div class="d-flex flex-row-reverse">
+                      <div class="p-2"><i class='bx bx-rss bx-md bx-tada-hover'></i></div>
+                      <div class="p-2"><i class='bx bx-envelope bx-md bx-tada-hover'></i></div>
+                      <div class="p-2"><i class='bx bxl-instagram bx-md bx-tada-hover'></i></div>
+                      <div class="p-2"><i class='bx bxl-facebook bx-md bx-tada-hover'></i></div>
+                  </div>
+                   <div class="row">
+                      <div class="col-sm-6">                        
+                    </div>      
+                    </div>    
+                </div>  
+          </section>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="card card-body shadow-xl mx-3 mx-md-4 mt-n6">
+  <div class="container">
+    <div class="section text-center">
+      <h2 class="title">Novedades</h2>
+       <!-- gif de bicho saltando -->
+       <div class="col-sm-6 justify-content-end align-self-end">
+        <img class="oog-review-section__image bicho"  alt="Monster jumping" src="https://cdn.teachyourmonster.org/assets/oog/pages/rff/animation-f97a193a35de2c5bd09ec2d0a08cb37773083ca95dbd9bde9b81cf18ddbc708f.gif" width="10%">
+    </div>
+    </div>
+  </div>
+<!-- COPIA HASTA AQUIIIIIII -->
 
 
 <!-- acordeon -->
@@ -282,6 +299,33 @@
   <h2>Guía de uso Web of Science Conect</h2>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores accusantium officiis facilis, adipisci labore neque non a ullam corrupti quae. Rem dignissimos praesentium perspiciatis autem quasi, maiores tempore perferendis cupiditate!</p>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores accusantium officiis facilis, adipisci labore neque non a ullam corrupti quae. Rem dignissimos praesentium perspiciatis autem quasi, maiores tempore perferendis cupiditate!</p>
+</section>
+<!-- Footer -->
+<footer class="container-fluid foot" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+  <div class="row">
+    <div class="col-sm-6 mapita">
+    <div class="embed-responsive embed-responsive-21by9">       
+          <iframe class="embed-responsive-item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2624.9916256937586!2d2.2922926156743895!3d48.858370079287475!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66e2964e34e2d%3A0x8ddca9ee380ef7e0!2sTorre%20Eiffel!5e0!3m2!1ses!2sar!4v1666466278743!5m2!1ses!2sar" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></iframe>
+          <p>Dirección Champ de Mars, 5 Av. Anatole France, 75007 Paris, Francia</p>
+        </div>
+      </div>
+    <div class="col-sm-3 formularios">
+      <form>
+          <div class="mb-3 align-items-self-end">        
+            <label for="exampleInputEmail1" class="form-label">Suscribete a nuestro newsletter!</label>
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+            <div id="emailHelp" class="form-text">Nunca compartiremos tu email.</div>
+            <button class="custom-btn btn-9"><span>Enviar</span></button>
+        </div>
+      </form>
+  </div>
+    <div class="col-sm-3 libri">
+      <img alt="" class="libri" style="display: block; height: auto !important; border="0" hspace="0" vspace="0" src="https://media.giphy.com/media/QWRbnbKwghRE0GbAQx/giphy.gif">
+      <p>BC Lorem - Todos los derechos reservados ©</p>
+    </div>        
+  </div>
+  </div>
+</footer>
 </section>
 
       <!-- JavaScript para animaciones de https://michalsnik.github.io/aos/ -->    
