--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -21,32 +21,6 @@
   <title>Biblioteca central</title>
 </head>
 <body>
-<!-- Encabezado -->
-    <!-- Encabezado -->
-    <header>
-      <div class="rosita" style="background-image: url('../images/rosita.jpg');"> 
-        <!-- iconos de redes sociales -->
-            <div class="d-flex flex-row-reverse">
-                <div class="p-2"><i class='bx bx-rss bx-md bx-tada-hover'></i></div>
-                <div class="p-2"><i class='bx bx-envelope bx-md bx-tada-hover'></i></div>
-                <div class="p-2"><i class='bx bxl-instagram bx-md bx-tada-hover'></i></div>
-                <div class="p-2"><i class='bx bxl-facebook bx-md bx-tada-hover'></i></div>
-            </div>
-             <div class="row">
-                <div class="col-sm-6">
-                  
-                    <h1>Biblioteca Central</h1>
-                    <h2>Universidad Nacional de Lorem</h2>
-              </div>         
-        <!-- gif de bicho saltando -->
-                <div class="col-sm-6 justify-content-end align-self-end">
-                    <img class="oog-review-section__image bicho"  alt="Monster jumping" src="https://cdn.teachyourmonster.org/assets/oog/pages/rff/animation-f97a193a35de2c5bd09ec2d0a08cb37773083ca95dbd9bde9b81cf18ddbc708f.gif" width="10%">
-                </div>
-           </div>    
-          </div>          
-           
-       </header>
-
 <!-- nav- menú principal -->
 <nav class="navbar navbar-expand-lg minav">
   <div class="container-fluid">
@@ -137,6 +111,49 @@
        </div>
      </div>
    </nav>
+<!-- COPIA HASTA AQUIIIIIII -->
+<!-- carta contenedora del body -->
+<section class="page-header min-vh-80" style="background-image: url('../images/rosita.jpg')">
+  <span class="mask bg-gradient-dark opacity-6"></span>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8 mx-auto">
+        <div class="text-center">
+          <h1 class="text-black whity">Biblioteca Central</h1>
+          <h3 class="text-black">Universidad Nacional de Lorem</h3>
+          <section class="redes">
+            <div class="rosita"> 
+              <!-- iconos de redes sociales -->
+                  <div class="d-flex flex-row-reverse">
+                      <div class="p-2"><i class='bx bx-rss bx-md bx-tada-hover'></i></div>
+                      <div class="p-2"><i class='bx bx-envelope bx-md bx-tada-hover'></i></div>
+                      <div class="p-2"><i class='bx bxl-instagram bx-md bx-tada-hover'></i></div>
+                      <div class="p-2"><i class='bx bxl-facebook bx-md bx-tada-hover'></i></div>
+                  </div>
+                   <div class="row">
+                      <div class="col-sm-6">                        
+                    </div>      
+                    </div>    
+                </div>  
+          </section>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="card card-body shadow-xl mx-3 mx-md-4 mt-n6">
+  <div class="container">
+    <div class="section text-center">
+      <h2 class="title">Novedades</h2>
+       <!-- gif de bicho saltando -->
+       <div class="col-sm-6 justify-content-end align-self-end">
+        <img class="oog-review-section__image bicho"  alt="Monster jumping" src="https://cdn.teachyourmonster.org/assets/oog/pages/rff/animation-f97a193a35de2c5bd09ec2d0a08cb37773083ca95dbd9bde9b81cf18ddbc708f.gif" width="10%">
+    </div>
+    </div>
+  </div>
+<!-- COPIA HASTA AQUIIIIIII -->
+
+
 
 <!-- tabla de servicios -->
 <section class="container titulino">
@@ -313,6 +330,7 @@
         </div>
         </div>
     </footer>
+</section>
       <!-- JavaScript para animaciones de https://michalsnik.github.io/aos/ -->    
       <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
       <script>    AOS.init();  </script>
