--- a/pages/calidad.html
+++ b/pages/calidad.html
@@ -156,7 +156,7 @@
 
     
 <!-- articulo con foto -->
-<aside data-aos="flip-left"> 
+<aside class="organitograma"  data-aos="flip-left"> 
   <div>
   <img src="../images/organigrama.jpg"" class="img-fluid col-md-6 float-md-end mb-3 ms-md-3" alt="Responsive image">
    
