--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -146,7 +146,7 @@
 <div class="card card-body shadow-xl mx-3 mx-md-4 mt-n6">
   <div class="container">
     <div class="section text-center">
-      <h2 class="title">Novedades</h2>
+      <h2 class="title">Formulario de contacto</h2>
        <!-- gif de bicho saltando -->
        <div class="col-sm-6 justify-content-end align-self-end">
         <img class="oog-review-section__image bicho"  alt="Monster jumping" src="https://cdn.teachyourmonster.org/assets/oog/pages/rff/animation-f97a193a35de2c5bd09ec2d0a08cb37773083ca95dbd9bde9b81cf18ddbc708f.gif" width="10%">
