--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -141,7 +141,7 @@
     </div>
   </div>
 </div>
-<div class="card card-body shadow-xl mx-3 mx-md-4 mt-n6">
+<div class="card card-body shadow-xl mx-3 mx-md-4 mt-n6 carti-loki">
   <div class="container">
     <div class="section text-center">
       <h2 class="title">Novedades</h2>
